FIX: Resolve NameError in generation script & Update Admin List

--- a/index.html
+++ b/index.html
@@ -2620,6 +2620,54 @@
         const ROADVIEW_PRESETS = [
             // User Request: Sejin Electronics (Daegu)
             { name: "세진전자통신", addr: "대구 서구 서대구로", panoid: 1201585664, pov: { pan: 93.03, tilt: 5.09, zoom: -3 } },
+            { name: "세방매점", addr: "경북 경주시 산업로", panoid: 1165999460, pov: { pan: 281.43, tilt: 6.82, zoom: -1 } },
+            // User Request: 4 Recovered Shops (260216)
+            { name: "대박행진 복권랜드", addr: "경기 파주시 금빛로", panoid: 1045548538, pov: { pan: 179.33, tilt: 3.10, zoom: -3 } },
+            { name: "서울로또방", addr: "충북 옥천군 삼금로", panoid: 1185000546, pov: { pan: 206.53, tilt: 3.14, zoom: -3 } },
+            { name: "우정식품", addr: "부산 동래구 온천장로", panoid: 1202699459, pov: { pan: 262.41, tilt: -2.15, zoom: -3 } },
+            { name: "가로판매소", addr: "서울 구로구 새말로", panoid: 1198164443, pov: { pan: 17.40, tilt: 6.76, zoom: 2 } },
+            { name: "원스탑", addr: "서울 송파구 백제고분로7길", panoid: 1197972914, pov: { pan: 27.06, tilt: -6.82, zoom: 0 } },
+            // User Request: 18 Recovered Shops (260216-2)
+            { name: "사이버정보통신", addr: "부산 부산진구 동평로", panoid: 1202364869, pov: { pan: 37.89, tilt: 2.99, zoom: -2 } },
+            { name: "나눔로또편의점", addr: "전남 광양시 공영로", panoid: 1205201589, pov: { pan: 183.29, tilt: -2.32, zoom: -1 } },
+            { name: "율암25시편의점", addr: "경기 화성시 시청로", panoid: 1198087972, pov: { pan: 158.58, tilt: 1.36, zoom: 0 } },
+            { name: "해피+24시편의점", addr: "광주 북구 하서로", panoid: 1200291324, pov: { pan: 84.83, tilt: 1.48, zoom: -3 } },
+            { name: "흥양마중물", addr: "강원 원주시 치악로", panoid: 1195199655, pov: { pan: 305.15, tilt: 13.98, zoom: -2 } },
+            { name: "복권마트 & 씨스페이스 홍천점", addr: "강원 홍천군 홍천로", panoid: 1197150362, pov: { pan: 307.89, tilt: 2.54, zoom: -2 } },
+            { name: "한국인세계대박복권", addr: "인천 연수구 독배로197번길", panoid: 1200648162, pov: { pan: 281.03, tilt: -2.90, zoom: -2 } },
+            { name: "하이로또", addr: "서울 금천구 금하로", panoid: 1198115190, pov: { pan: 209.13, tilt: -1.64, zoom: -2 } },
+            { name: "충남상회", addr: "인천 미추홀구 참외전로", panoid: 1199332008, pov: { pan: 287.35, tilt: 2.72, zoom: 0 } },
+            { name: "세븐일레븐화성봉담수기점", addr: "경기 화성시 세자로", panoid: 1197741399, pov: { pan: 154.47, tilt: 0.15, zoom: 2 } },
+            { name: "새상무복권", addr: "광주 서구 치평로", panoid: 1200264571, pov: { pan: 92.32, tilt: 0.07, zoom: -2 } },
+            { name: "한아름매점", addr: "충남 홍성군 광천읍", panoid: 1160927365, pov: { pan: 23.96, tilt: -3.90, zoom: -3 } },
+            { name: "차부상회", addr: "경기 김포시 통진읍", panoid: 1203538717, pov: { pan: 40.20, tilt: -1.06, zoom: -3 } },
+            { name: "행복슈퍼", addr: "서울 성북구 동소문로", panoid: 1198249502, pov: { pan: 8.00, tilt: 11.80, zoom: -3 } },
+            { name: "서해로또방", addr: "경기 화성시 화성로", panoid: 1196541229, pov: { pan: 347.47, tilt: 3.57, zoom: 1 } },
+            { name: "용두천하", addr: "광주 북구 하서로", panoid: 1200286962, pov: { pan: 260.36, tilt: 6.67, zoom: 0 } },
+            { name: "영훈슈퍼마켓", addr: "서울 도봉구 창3동", panoid: 1198487686, pov: { pan: 44.21, tilt: 2.30, zoom: -3 } },
+            { name: "코리아마트(비산점)", addr: "대구 서구 국채보상로", panoid: 1201556335, pov: { pan: 2.80, tilt: 1.39, zoom: 0 } },
+            { name: "원웨이로또 (폐점)", addr: "서울 서초구 서초동 1571-18 청화빌딩", isClosed: true, customMessage: "과거 6회 당첨 이력이 있으나 현재 폐점되었습니다." },
+            { name: "원스탑", addr: "서울 송파구 백제고분로7길", panoid: 1197972914, pov: { pan: 27.06, tilt: -6.82, zoom: 0 } },
+            { name: "원웨이로또 (폐점)", addr: "서울 서초구 서초동 1571-18 청화빌딩", isClosed: true, customMessage: "과거 6회 당첨 이력이 있으나 현재 폐점되었습니다." },
+            // User Request: 18 Recovered Shops (260216-2)
+            { name: "사이버정보통신", addr: "부산 부산진구 동평로", panoid: 1202364869, pov: { pan: 37.89, tilt: 2.99, zoom: -2 } },
+            { name: "나눔로또편의점", addr: "전남 광양시 공영로", panoid: 1205201589, pov: { pan: 183.29, tilt: -2.32, zoom: -1 } },
+            { name: "율암25시편의점", addr: "경기 화성시 시청로", panoid: 1198087972, pov: { pan: 158.58, tilt: 1.36, zoom: 0 } },
+            { name: "해피+24시편의점", addr: "광주 북구 하서로", panoid: 1200291324, pov: { pan: 84.83, tilt: 1.48, zoom: -3 } },
+            { name: "흥양마중물", addr: "강원 원주시 치악로", panoid: 1195199655, pov: { pan: 305.15, tilt: 13.98, zoom: -2 } },
+            { name: "복권마트 & 씨스페이스 홍천점", addr: "강원 홍천군 홍천로", panoid: 1197150362, pov: { pan: 307.89, tilt: 2.54, zoom: -2 } },
+            { name: "한국인세계대박복권", addr: "인천 연수구 독배로197번길", panoid: 1200648162, pov: { pan: 281.03, tilt: -2.90, zoom: -2 } },
+            { name: "하이로또", addr: "서울 금천구 금하로", panoid: 1198115190, pov: { pan: 209.13, tilt: -1.64, zoom: -2 } },
+            { name: "충남상회", addr: "인천 미추홀구 참외전로", panoid: 1199332008, pov: { pan: 287.35, tilt: 2.72, zoom: 0 } },
+            { name: "세븐일레븐화성봉담수기점", addr: "경기 화성시 세자로", panoid: 1197741399, pov: { pan: 154.47, tilt: 0.15, zoom: 2 } },
+            { name: "새상무복권", addr: "광주 서구 치평로", panoid: 1200264571, pov: { pan: 92.32, tilt: 0.07, zoom: -2 } },
+            { name: "한아름매점", addr: "충남 홍성군 광천읍", panoid: 1160927365, pov: { pan: 23.96, tilt: -3.90, zoom: -3 } },
+            { name: "차부상회", addr: "경기 김포시 통진읍", panoid: 1203538717, pov: { pan: 40.20, tilt: -1.06, zoom: -3 } },
+            { name: "행복슈퍼", addr: "서울 성북구 동소문로", panoid: 1198249502, pov: { pan: 8.00, tilt: 11.80, zoom: -3 } },
+            { name: "서해로또방", addr: "경기 화성시 화성로", panoid: 1196541229, pov: { pan: 347.47, tilt: 3.57, zoom: 1 } },
+            { name: "용두천하", addr: "광주 북구 하서로", panoid: 1200286962, pov: { pan: 260.36, tilt: 6.67, zoom: 0 } },
+            { name: "영훈슈퍼마켓", addr: "서울 도봉구 창3동", panoid: 1198487686, pov: { pan: 44.21, tilt: 2.30, zoom: -3 } },
+            { name: "코리아마트(비산점)", addr: "대구 서구 국채보상로", panoid: 1201556335, pov: { pan: 2.80, tilt: 1.39, zoom: 0 } },
             { name: "교통카드판매대", addr: "서울 강동구 고덕동 210-1", isClosed: true, customMessage: "현재 폐점되었습니다 (구서울승합종점앞 가판대)." },
             { name: "부일카서비스", addr: "부산 동구 범일동", panoId: 1202519412, pov: { pan: 236.39, tilt: 6.54, zoom: -3 } },
             { name: "일등복권편의점", addr: "대구 달서구 본리동", panoId: 1201526676, pov: { pan: 349.47, tilt: 12.34, zoom: -1 } },
@@ -3187,7 +3235,7 @@
             const cacheBuster = '?v=' + Date.now();
 
             try {
-                // Using simple relative paths which are most reliable on GitHub Pages
+                // Using simple          pat         are most reliable on GitHub Pages
                 const [lottoData, historyData] = await Promise.all([
                     fetch('https://integral81.github.io/lottomap/lotto_data.json' + cacheBuster).then(res => {
                         if (!res.ok) throw new Error('Data file not found (404)');
@@ -3669,9 +3717,8 @@
                         <div class="iw-title">${shop.n} ${shop.totalWins >= 5 ? '🌟' : ''} ${shop.closed ? '<span style="font-size:12px; color:red;">(폐업)</span>' : ''}</div>
                         <div class="iw-addr-box" onclick="openRoadviewWithCopy(${shop.lat}, ${shop.lng}, '${safeName}', '${safeAddr}')" title="주소 복사 (로드뷰 보기)">
                             <span class="iw-addr">${displayAddr}</span>
-                            <svg width="14" height="14" viewBox="0 0 24 24" fill="#666"><path d="M16 1H4c-1.11 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
-                        </div>
-                        <div style="font-weight:bold; color:red; margin-bottom:5px;">총 ${shop.totalWins}회 당첨</div>
+                            <svg width="14" height="14" viewBox="0 0 24 24" fill="#666"><path d="M16 1H4c-1.11 0-2 .9-2        3h12         c-1.1 0-2 .9-2 2v14c0 1.1.9 2          1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
+                                                       <div style="font-weight:bold; color:red; margin-bottom:5px;">총 ${shop.totalWins}회 당첨</div>
                         <div class="iw-details">${roundTagsHtml}</div>
                         <button class="btn-gold" onclick="openAdModal('${safeName}', '${safeAddr}', ${shop.lat}, ${shop.lng}, ${shop.totalWins}, ${shop.closed})">
                             ✨ 이번 주 1등 추천 번호 받기
@@ -4842,8 +4889,8 @@
         }
 
         function openDirections(lat, lng, name) {
-            const url = `https://map.kakao.com/link/to/${encodeURIComponent(name)},${lat},${lng}`;
-            window.open(url, '_blank');
+            const url = `https://map.kakao.com/link/to/${encodeURIComponent(name)},${, ${ lng }`;
+         en(url, '_blank');
         }
 
         function shareToKakao() {
@@ -4979,7 +5026,7 @@
 
             if (navigator.clipboard && navigator.clipboard.writeText) {
                 navigator.clipboard.writeText(text).then(() => {
-                    showToast(`📋 번호가 복사되었습니다: ${text}`);
+                    showToast(`📋 번호가 복사되었습니다: ${ text } `);
                 }).catch(err => {
                     showToast('복사 실패: ' + err);
                 });
@@ -5125,8 +5172,8 @@
                 displayRoadview(activePreset.panoId, verifiedPos);
             } else {
                 // Precise Identification using Places Service
-                const ps = new kakao.maps.services.Places();
-                ps.keywordSearch(`${address} ${shopName}`, function (data, status) {
+                const ps = new o.mvices.Places();
+                ps.keywordSearch(`${ address } ${ shopName } `, function (data, status) {
                     let targetPos = new kakao.maps.LatLng(lat, lng);
                     if (status === kakao.maps.services.Status.OK) {
                         const target = data.find(p => p.category_name.includes('복권') || p.place_name.includes(shopName)) || data[0];
