Register 'Lucky Super' & 'Jun' (Retry Final Sync)

--- a/index.html
+++ b/index.html
@@ -2648,7 +2648,74 @@
             { name: "코리아마트(비산점)", addr: "대구 서구 국채보상로", panoid: 1201556335, pov: { pan: 2.80, tilt: 1.39, zoom: 0 } },
             { name: "원웨이로또 (폐점)", addr: "서울 서초구 서초동 1571-18 청화빌딩", isClosed: true, customMessage: "과거 6회 당첨 이력이 있으나 현재 폐점되었습니다." },
             { name: "원스탑", addr: "서울 송파구 백제고분로7길", panoid: 1197972914, pov: { pan: 27.06, tilt: -6.82, zoom: 0 } },
-            { name: "원웨이로또 (폐점)", addr: "서울 서초구 서초동 1571-18 청화빌딩", isClosed: true, customMessage: "과거 6회 당첨 이력이 있으나 현재 폐점되었습니다." },
+            // User Request: 3 Shops (260216-3)
+            { name: "제일복권", addr: "경남 양산시 양산역2길", panoid: 1204952001, pov: { pan: 21.04, tilt: -3.52, zoom: 0 } },
+            { name: "터미널식품", addr: "경기 의정부시 의정로", panoid: 1174621640, pov: { pan: 68.32, tilt: -2.09, zoom: 1 } },
+            { name: "진양호", addr: "경남 진주시 남강로", panoid: 1192787482, pov: { pan: 245.24, tilt: 1.05, zoom: 3 } },
+            // User Request: 13 Shops (260216-4)
+            { name: "작은신부", addr: "충남 서산시 구진로", panoid: 1177372374, pov: { pan: 95.48, tilt: -0.98, zoom: 2 } },
+            { name: "보경복권", addr: "울산 북구 명촌6길", panoid: 1202119790, pov: { pan: 349.51, tilt: 0.35, zoom: 1 } },
+            { name: "로또야놀자", addr: "경북 경주시 양정로", panoid: 1187157120, pov: { pan: 265.02, tilt: 0.41, zoom: -2 } },
+            { name: "로또또", addr: "경기 김포시 봉수대로", panoid: 1203018324, pov: { pan: 343.01, tilt: 1.95, zoom: -3 } },
+            { name: "삼성포토랜드", addr: "인천 강화군 북문길", panoid: 1199442921, pov: { pan: 105.41, tilt: 2.36, zoom: -3 } },
+            { name: "세븐일레븐 현풍대로점", addr: "대구 달성군 비슬로", panoid: 1200939879, pov: { pan: 198.04, tilt: -0.79, zoom: 0 } },
+            { name: "우두로또", addr: "강원 춘천시 영서로", panoid: 1195653386, pov: { pan: 27.37, tilt: -1.48, zoom: 2 } },
+            { name: "송내매표소", addr: "경기 부천시 소사구", panoid: 1203623206, pov: { pan: 303.66, tilt: -6.13, zoom: 2 } },
+            { name: "온천로또방", addr: "대전 유성구 계룡로", panoid: 1200704937, pov: { pan: 260.53, tilt: -4.97, zoom: 2 } },
+            { name: "한경종합광고", addr: "서울 송파구 백제고분로", panoid: 1197947148, pov: { pan: 210.81, tilt: 2.59, zoom: 3 } },
+            { name: "그린로또", addr: "강원 양양군 양양로", panoid: 1196252686, pov: { pan: 175.22, tilt: -0.57, zoom: 1 } },
+            { name: "호반할인마트", addr: "광주 광산구 도산로9번길", panoid: 1200129909, pov: { pan: 318.66, tilt: 1.75, zoom: -3 } },
+            { name: "로또스튜디오", addr: "충북 청주시 청원구", panoid: 1170630295, pov: { pan: 53.76, tilt: 0.21, zoom: -3 } },
+            // User Request: 6 Shops (260216-5)
+            { name: "코사마트금강점", addr: "대구 달서구 용산로", panoid: 1201616618, pov: { pan: 87.20, tilt: 5.74, zoom: -3 } },
+            { name: "황금대박점", addr: "서울 노원구 공릉로", panoid: 1197986422, pov: { pan: 75.30, tilt: 2.10, zoom: 2 } },
+            { name: "봉황로또", addr: "전북 임실군 운수로", panoid: 1184544406, pov: { pan: 277.47, tilt: -7.51, zoom: 2 } },
+            { name: "운수대통", addr: "인천 부평구 동암광장로", panoid: 1199147716, pov: { pan: 221.75, tilt: -1.58, zoom: 2 } },
+            { name: "울릉로또", addr: "경북 울릉군 봉래2길", panoid: 1196322336, pov: { pan: 192.70, tilt: -3.11, zoom: -3 } },
+            { name: "제주대림점", addr: "제주 제주시 과원북2길", panoid: 1182183945, pov: { pan: 156.35, tilt: -4.86, zoom: 1 } },
+            // User Request: D-mart (260216-6)
+            { name: "D-마트 담배", addr: "강원 속초시 조양상가길", panoid: 1196877412, pov: { pan: 235.90, tilt: -3.77, zoom: -3 }, customMessage: "롯데마트 내부 1층에 있습니다." },
+            // User Request: 3 Shops (260216-7)
+            { name: "스카이편의점", addr: "경기 안양시 만안구", panoid: 1202967509, pov: { pan: 172.54, tilt: -3.97, zoom: -3 } },
+            { name: "이삭", addr: "전남 목포시 통일대로", panoid: 1192652943, pov: { pan: 346.05, tilt: -3.16, zoom: 1 } },
+            { name: "대박유통", addr: "부산 중구 구덕로", panoid: 1202686590, pov: { pan: 326.06, tilt: -4.19, zoom: 1 } },
+            // User Request: 6 Shops (260216-8)
+            { name: "안성맞춤", addr: "경기 안성시 안성맞춤대로", panoid: 1176067110, pov: { pan: 201.02, tilt: 4.96, zoom: -2 } },
+            { name: "신세계", addr: "제주 제주시 고마로14길", panoid: 1182352878, pov: { pan: 115.48, tilt: -1.66, zoom: -3 } },
+            { name: "구담쌀슈퍼", addr: "경북 안동시 경동로", panoid: 1166243556, pov: { pan: 213.59, tilt: -1.80, zoom: -3 } },
+            { name: "토토복권", addr: "대구 서구 달서로12길", panoid: 1201339587, pov: { pan: 9.12, tilt: -3.19, zoom: -3 } },
+            { name: "우리은행금호동지점앞가판", addr: "서울 성동구 장터길", panoid: 1198891800, pov: { pan: 264.88, tilt: -10.57, zoom: -3 } },
+            { name: "외동복권", addr: "경남 김해시 동남로49번길", panoid: 1193704600, pov: { pan: 167.72, tilt: -1.15, zoom: -3 } },
+            // User Request: Closed Shop (260216-9)
+            { name: "엘도라도복권전문점", addr: "서울 광진구 중곡동 124-65", isClosed: true, customMessage: "현재 폐점되었습니다." },
+            // User Request: 3 Shops (260216-10)
+            { name: "하프타임(괴정점)", addr: "부산 사하구 사하로", panoid: 1202279089, pov: { pan: 191.71, tilt: -0.16, zoom: -1 } },
+            { name: "동홍코사마트", addr: "제주 서귀포시 동홍서로", panoid: 1181313516, pov: { pan: 92.42, tilt: 4.57, zoom: -3 } },
+            { name: "토큰박스", addr: "경기 남양주시 진건오남로", panoid: 1185000546, pov: { pan: 209.59, tilt: 3.38, zoom: -3 } },
+            // User Request: Today (260216-11)
+            { name: "Today", addr: "서울 광진구 광나루로56길", panoid: 1198490195, pov: { pan: 148.43, tilt: -3.00, zoom: -3 }, customMessage: "테크노파크 9층에 매장있음" },
+            // User Request: New Signboard (260216-12)
+            { name: "신간판", addr: "서울 중구 무교동 12-1", panoid: 1198684037, pov: { pan: 77.59, tilt: -6.13, zoom: -1 }, customMessage: "곰국시집 앞 가판이 맞습니다." },
+            // User Request: 2 Shops (260216-13)
+            { name: "버스카드판매대", addr: "서울 관악구 신림로", panoid: 1198278084, pov: { pan: 223.84, tilt: -0.59, zoom: -3 } },
+            { name: "마리오슈퍼", addr: "경기 부천시 송내대로265번길", panoid: 1203673840, pov: { pan: 188.39, tilt: -0.22, zoom: -1 }, customMessage: "뱅뱅프라자 1층 내부에 매장있음." },
+            // User Request: 6 Shops (260216-14)
+            { name: "원동슈퍼", addr: "충남 보령시 중앙로", panoid: 1176675568, pov: { pan: 101.32, tilt: 4.96, zoom: -3 } },
+            { name: "현암꽃플라워", addr: "대전 동구 태전로", panoid: 1201410105, pov: { pan: 227.22, tilt: -2.16, zoom: -3 } },
+            { name: "미래유통", addr: "전남 목포시 영산로", panoid: 1192393614, pov: { pan: 282.37, tilt: 1.75, zoom: -1 } },
+            { name: "장군슈퍼", addr: "경기 부천시 오정구", panoid: 1203452762, pov: { pan: 315.13, tilt: -1.34, zoom: 0 } },
+            { name: "신명", addr: "서울 강서구 방화2동", panoid: 1198209762, pov: { pan: 307.53, tilt: 0.56, zoom: 0 } },
+            { name: "대광슈퍼", addr: "경기 군포시 고산로", panoid: 1175371099, pov: { pan: 334.69, tilt: -2.37, zoom: 2 } },
+            // User Request: 9 Shops (260216-15)
+            { name: "혹시나도", addr: "충북 음성군 감곡면", panoid: 1164851877, pov: { pan: 16.89, tilt: 5.51, zoom: 2 } },
+            { name: "나라시스컴", addr: "서울 영등포구 영등포로", panoid: 1198373900, pov: { pan: 20.51, tilt: 2.58, zoom: 2 } },
+            { name: "나눔이매로또", addr: "경기 성남시 분당구", panoid: 1199105925, pov: { pan: 313.10, tilt: 0.42, zoom: 1 } },
+            { name: "대림통상", addr: "울산 중구 태화동", panoid: 1201823875, pov: { pan: 24.91, tilt: 3.83, zoom: 1 } },
+            { name: "제일슈퍼", addr: "인천 연수구 앵고개로", panoid: 1199991356, pov: { pan: 303.39, tilt: 1.72, zoom: 0 } },
+            { name: "경기상회", addr: "인천 남동구 만수동", panoid: 1199316390, pov: { pan: 177.01, tilt: 2.38, zoom: 1 } },
+            { name: "스포츠베팅샵", addr: "서울 서초구 양재대로11길", panoid: 1198055141, pov: { pan: 182.79, tilt: 2.40, zoom: 2 } },
+            { name: "우미슈퍼", addr: "광주 서구 풍암동", panoid: 1200542640, pov: { pan: 294.37, tilt: 1.70, zoom: 2 } },
+            { name: "진성식품", addr: "충북 제천시 의병대로", panoid: 1185296414, pov: { pan: 197.87, tilt: -0.77, zoom: 1 } },
             // User Request: 18 Recovered Shops (260216-2)
             { name: "사이버정보통신", addr: "부산 부산진구 동평로", panoid: 1202364869, pov: { pan: 37.89, tilt: 2.99, zoom: -2 } },
             { name: "나눔로또편의점", addr: "전남 광양시 공영로", panoid: 1205201589, pov: { pan: 183.29, tilt: -2.32, zoom: -1 } },
@@ -2671,6 +2738,14 @@
             { name: "교통카드판매대", addr: "서울 강동구 고덕동 210-1", isClosed: true, customMessage: "현재 폐점되었습니다 (구서울승합종점앞 가판대)." },
             { name: "부일카서비스", addr: "부산 동구 범일동", panoId: 1202519412, pov: { pan: 236.39, tilt: 6.54, zoom: -3 } },
             { name: "일등복권편의점", addr: "대구 달서구 본리동", panoId: 1201526676, pov: { pan: 349.47, tilt: 12.34, zoom: -1 } },
+            // User Request: Buheung Fruit (260216-16) - Verified from Link
+            { name: "부흥청과식품점", addr: "경북 경산시 하양읍 금락리", panoid: 1187452657, pov: { pan: 293.20, tilt: -0.90, zoom: 0 } },
+            // User Request: Buyeong Mart (260216-17) - Verified Same Location/Relocation
+            { name: "부영마트", addr: "서울 중랑구 상봉동 108", panoid: 1197812240, pov: { pan: 21.50, tilt: -0.50, zoom: 1 }, customMessage: "상봉동 108번지 (면목로 481) 동일 매장입니다." },
+            // User Request: Lucky Super (260216-18) - Verified Relocation
+            { name: "럭키슈퍼", addr: "서울 용산구 후암동", panoid: 1197374162, pov: { pan: 79.24, tilt: 0.96, zoom: 2 }, customMessage: "후암동 446 -> 후암로 52 (이전/동일매장)" },
+            // User Request: Jun (260216-18)
+            { name: "준", addr: "경기 평택시 포승읍", panoid: 1196771227, pov: { pan: 103.33, tilt: -2.22, zoom: 2 } },
             { name: "스파", addr: "서울 노원구 상계동", panoId: 1198397843, pov: { pan: 316.53, tilt: 2.76, zoom: -1 } },
             { name: "로또명당인주점", addr: "충남 아산시 서해로", panoId: 1152034899, pov: { pan: 324.00, tilt: 3.71, zoom: -3 } },
             { name: "뉴빅마트", addr: "부산 기장군 정관중앙로", panoId: 1202061273, pov: { pan: 113.90, tilt: -1.64, zoom: 1 } },
