--- a/index.html
+++ b/index.html
@@ -209,10 +209,11 @@
         }
 
         .infowindow {
-            padding: 12px;
-            min-width: 200px;
-            min-height: 120px;
-            box-sizing: border-box;
+            padding: 10px;
+            min-width: 220px;
+            display: flex;
+            flex-direction: column;
+            gap: 2px;
             background: #fff;
         }
 
@@ -242,10 +243,11 @@
 
         .iw-actions {
             display: flex !important;
-            gap: 10px;
-            margin-top: 15px;
+            width: 100%;
+            gap: 8px;
+            margin-top: 10px;
             border-top: 1px dashed #eee;
-            padding-top: 12px;
+            padding-top: 10px;
             visibility: visible !important;
         }
 
@@ -3818,14 +3820,15 @@
                         <div class="iw-title">${shop.n} ${shop.totalWins >= 5 ? '🌟' : ''} ${shop.closed ? '<span style="font-size:12px; color:red;">(폐업)</span>' : ''}</div>
                         <div class="iw-addr-box" onclick="openRoadviewWithCopy(${shop.lat}, ${shop.lng}, '${safeName}', '${safeAddr}')" title="주소 복사 (로드뷰 보기)">
                             <span class="iw-addr">${displayAddr}</span>
-                            <svg width="14" height="14" viewBox="0 0 24 24" fill="#666"><path d="M16 1H4c-1.11 0-2 .9-2        3h12         c-1.1 0-2 .9-2 2v14c0 1.1.9 2          1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
-                                                       <div style="font-weight:bold; color:red; margin-bottom:5px;">총 ${shop.totalWins}회 당첨</div>
+                            <svg width="14" height="14" viewBox="0 0 24 24" fill="#666"><path d="M16 1H4c-1.11 0-2 .9-2 3h12 c-1.1 0-2 .9-2 2v14c0 1.1.9 2 1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
+                        </div>
+                        <div style="font-weight:bold; color:red; margin-bottom:5px; font-size:13px;">총 ${shop.totalWins}회 당첨</div>
                         <div class="iw-details">${roundTagsHtml}</div>
-                        <button class="btn-gold" onclick="openAdModal('${safeName}', '${safeAddr}', ${shop.lat}, ${shop.lng}, ${shop.totalWins}, ${shop.closed})">
+                        <button class="btn-gold" style="width:100%; margin-top:8px;" onclick="openAdModal('${safeName}', '${safeAddr}', ${shop.lat}, ${shop.lng}, ${shop.totalWins}, ${shop.closed})">
                             ✨ 이번 주 1등 추천 번호 받기
                         </button>
                         <div class="iw-actions">
-                            <button class="btn-iw btn-navi" onclick="openRoadviewWithNavi(${shop.lat}, ${shop.lng}, '${safeName}', '${safeAddr}')">
+                            <button class="btn-iw btn-navi" style="width:100%;" onclick="openRoadviewWithNavi(${shop.lat}, ${shop.lng}, '${safeName}', '${safeAddr}')">
                                 로드뷰(ROAD VIEW) 보기
                             </button>
                         </div>
