--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
 
         .iw-addr-box:hover {
             background: #f0f0f0;
+            border-color: var(--secondary);
         }
 
         /* GPS Pulse Animation */
@@ -3818,7 +3819,7 @@
                 const content = `
                     <div class="infowindow">
                         <div class="iw-title">${shop.n} ${shop.totalWins >= 5 ? '🌟' : ''} ${shop.closed ? '<span style="font-size:12px; color:red;">(폐업)</span>' : ''}</div>
-                        <div class="iw-addr-box" onclick="openRoadviewWithCopy(${shop.lat}, ${shop.lng}, '${safeName}', '${safeAddr}')" title="주소 복사 (로드뷰 보기)">
+                        <div class="iw-addr-box" onclick="copyToClipboard('${safeAddr}')" title="주소 복사하기">
                             <span class="iw-addr">${displayAddr}</span>
                             <svg width="14" height="14" viewBox="0 0 24 24" fill="#666"><path d="M16 1H4c-1.11 0-2 .9-2 3h12 c-1.1 0-2 .9-2 2v14c0 1.1.9 2 1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
                         </div>
